=== 4.25.0 (2015-08-01)

* Add Dataset#insert_conflict on PostgreSQL 9.5+, for upsert/insert ignore support using INSERT ON CONFLICT (jeremyevans)

* Support Dataset#group_rollup and #group_cube on PostgreSQL 9.5+ (jeremyevans)

* Automatically REORG tables when altering when using jdbc/db2 (karlhe) (#1054)

* Recognize constraint violation exceptions on swift/sqlite (jeremyevans)

* Recognize another check constraint violation exception message on SQLite (jeremyevans)

* Allow =~ and !~ to be used on ComplexExpressions (janko-m) (#1050)

* Support case sensitive SQL Server 2012 in MSSQL metadata queries (knut2) (#1049)

* Add Dataset#group_append, for appending to the existing GROUP BY clause (YorickPeterse) (#1047)

* Add inverted_subsets plugin, for creating an inverted subset method for each subset (celsworth) (#1042)

* Make Dataset#for_update not use the :read_only database when the dataset is executed (jeremyevans) (#1041)

* Add singular_table_names plugin, for changing Sequel to not pluralize table names by default (jeremyevans)

* PreparedStatement#prepare now raises an Error (jeremyevans)

* Clear delayed association pks when refreshing an object (jeremyevans)

* Add empty_array_consider_nulls extension to make Sequel consider NULL values when using IN/NOT IN with an empty array (jeremyevans)

* Make Sequel default to ignoring NULL values when using IN/NOT IN with an empty array (jeremyevans)

* Remove the deprecated firebird and informix adapters (jeremyevans)

* Make :collate option when creating columns literalize non-String values on PostgreSQL (jeremyevans) (#1040)

* Make dirty plugin notice when serialized column is changed (celsworth) (#1039)

* Allow prepared statements to use RETURNING (jeremyevans) (#1036)

=== 4.24.0 (2015-07-01)

* Allow class_table_inheritance plugin to support subclasses that don't add additional columns (QuinnHarris, jeremyevans) (#1030)
